Removed install_weak_deps=false option
Signed-off-by: Joshua John <joshuajohnv15@gmail.com>

--- a/fedora-42-base/Containerfile
+++ b/fedora-42-base/Containerfile
@@ -11,6 +11,5 @@ LABEL com.github.containers.toolbox="true" \
 RUN dnf --assumeyes install \
 	fzf zoxide \
 	clang-tools-extra gcc make \
-	vim \
-	--setopt=install_weak_deps=false
+	vim
 RUN dnf clean all
