--- a/ubuntu-25.04-reseau/Containerfile
+++ b/ubuntu-25.04-reseau/Containerfile
@@ -32,5 +32,6 @@ RUN apt-get update \
   && pipx install --global --include-deps ansible \
   && apt-get autoremove -y
 
-
-
+RUN wget https://go.dev/dl/go1.25.0.linux-amd64.tar.gz \
+  && tar -C /usr/local -xzf go1.25.0.linux-amd64.tar.gz \
+  && echo "Run export PATH=\$PATH:/usr/local/go/bin"
