--- a/fedora-42-base/Containerfile
+++ b/fedora-42-base/Containerfile
@@ -2,6 +2,7 @@ FROM quay.io/fedora/fedora-toolbox:42
 
 ARG NAME=fedora-42-base
 ARG VERSION=42
+
 LABEL com.github.containers.toolbox="true" \
       name="$NAME" \
       version="$VERSION" \
@@ -11,5 +12,5 @@ LABEL com.github.containers.toolbox="true" \
 RUN dnf --assumeyes install \
 	fzf zoxide \
 	clang-tools-extra gcc make \
-	vim
-RUN dnf clean all
+	vim \
+	&& dnf clean all
