--- a/ubuntu-25.04-reseau/Containerfile
+++ b/ubuntu-25.04-reseau/Containerfile
@@ -9,13 +9,14 @@ LABEL com.github.containers.toolbox="true" \
       usage="This image is meant to be used with the toolbox(1) command" \
       summary="Ubuntu 25.04 image for self hosted server development"
 
-RUN curl -fsSL 'https://dl.cloudsmith.io/public/caddy/xcaddy/gpg.key' | gpg --dearmor -o /usr/share/keyrings/caddy-xcaddy-archive-keyring.gpg \
-  && curl -fsSL 'https://dl.cloudsmith.io/public/caddy/xcaddy/debian.deb.txt' | tee /etc/apt/sources.list.d/caddy-xcaddy.list \
+RUN curl -fsSL 'https://dl.cloudsmith.io/public/caddy/stable/gpg.key' | gpg --dearmor -o /usr/share/keyrings/caddy-stable`-archive-keyring.gpg \
+  && curl -fsSL 'https://dl.cloudsmith.io/public/caddy/stable/debian.deb.txt' | tee /etc/apt/sources.list.d/caddy-stable.list \
   && curl -sLf 'https://apt.releases.hashicorp.com/gpg' | gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg \
   && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(grep -oP '(?<=UBUNTU_CODENAME=).*' /etc/os-release || lsb_release -cs) main" | tee /etc/apt/sources.list.d/hashicorp.list \
   && apt-get update \
   && apt-get install --no-install-recommends --yes \
     apt-transport-https \
+    caddy \
     fzf \
     pipx \
     python3 \
@@ -23,16 +24,9 @@ RUN curl -fsSL 'https://dl.cloudsmith.io/public/caddy/xcaddy/gpg.key' | gpg --de
     terraform \
     ubuntu-keyring \
     vim \
-    xcaddy \
     zoxide \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/* \
   && pipx ensurepath \
   && pipx ensurepath --global \
   && pipx install --global --include-deps ansible
-
-RUN curl -fsSL --output go.linux-amd64.tar.gz 'https://go.dev/dl/go1.25.0.linux-amd64.tar.gz' \
-  && tar -C /usr/local -xzf go.linux-amd64.tar.gz \
-  && rm go.linux-amd64.tar.gz
-
-ENV PATH="/usr/local/go/bin:${PATH}"
