--- a/ubuntu-25.04-reseau/Containerfile
+++ b/ubuntu-25.04-reseau/Containerfile
@@ -18,12 +18,12 @@ RUN curl -fsSL 'https://dl.cloudsmith.io/public/caddy/stable/gpg.key' | gpg --de
     apt-transport-https \
     caddy \
     fzf \
+    neovim \
     pipx \
     python3 \
     software-properties-common \
     terraform \
     ubuntu-keyring \
-    vim \
     zoxide \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/* \
